@@ -45,8 +45,7 @@
 // Searching
 #include <xapian/enquire.h>
 #include <xapian/expanddecider.h>
-// Disable for 1.0.2 release.
-//#include <xapian/matchspy.h>
+#include <xapian/matchspy.h>
 #include <xapian/query.h>
 #include <xapian/queryparser.h>
 
