@@ -1,3 +1,7 @@
+Thu Jul 05 02:08:13 BST 2007  Olly Betts <olly@survex.com>
+
+	* include/xapian.h,tests/api_wrdb.cc: Restore MatchSpy stuff.
+
 Thu Jul 05 01:38:38 BST 2007  Olly Betts <olly@survex.com>
 
 	* HACKING: Note that RoadMap on the wiki needs updating for each
